<resources>
    <string name="app_name">UNParche</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="edad">Edad</string>
    <string name="descripcion">Descripcion</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Correo electronico</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesion</string>
    <string name="action_register">Registrarse</string>
    <string name="action_retrieve">Reestablecer contraseña</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_sign_in_short">Iniciar sesion</string>

    <string name="invalid_username">Ingrese correo electronico valido</string>
    <string name="invalid_password">Ingrese una contraseña de mas de 6 digitos</string>

    <string name="usuario_creado">Usuario creado con exito :)</string>
    <string name="completar_campos">Complete todos los datos..!</string>


    <string name="frame_name_registro">Registro</string>
    <string name="frame_name_reset">Recuperación</string>
    <string name="guardar">Guardar</string>
    <string name="mis_actividades">Mis Actividades</string>
    <string name="crear">Crear</string>
    <string name="title_activity_localizar_sitio">LocalizarSitioActivity</string>
    <string name="title_activity_sitios_cerca">SitiosCercaActivity</string>
</resources>